DOS-1008 Add list of added tools

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -34,6 +34,11 @@ tags: ["draft"]
   - Panos -- Added support for license (see our [feature matrix](https://matrix.ipfabric.io) for more details).
   - Prisma -- Added support for management tasks (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 
+### Underlying Operating System and 3rd party packages
+
+- The `dex` package used for SSO was upgraded from version 2.30.2 to latest version 2.36.0, see [their release notes](https://github.com/dexidp/dex/releases).
+- Added several tools to simplify image management and troubleshooting. We are explicitly including the following -- `dnsutils`, `htop`, `ldap-utils`, `lftp`, `libcap2-bin`, `lsof`, `mtr-tiny`, `nano`, `net-tools`, `ncdu`, `screen`, `sntp`, `strace`, `tcpd`, `tcpdump`, `telnet`, `tmux`, `traceroute`, `vim`, `wget`.
+
 ### Upgrade Notices
 
 - Upgrade to `v6.2` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `vX.Y` in this file with `v6.2` and then run `systemctl restart ipf-dex`.
@@ -46,7 +51,3 @@ tags: ["draft"]
   ```
 
   For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/user_management/sso/#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
-
-### 3rd party dependencies
-
-- The `dex` package used for SSO was upgraded from version 2.30.2 to latest version 2.36.0, see [their release notes](https://github.com/dexidp/dex/releases).
