--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -1,7 +1,3 @@
----
-tags: ["draft"]
----
-
 # IP Fabric v6.2 (Hessian)
 
 !!! danger "Unreleased version"
@@ -12,7 +8,16 @@ tags: ["draft"]
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v6.2.0 (TBD)
+## v6.2.1 (April 11th, 2023)
+
+```shell
+SHA256 (ipfabric-6-2-1+0.qcow2) = d0c32f66a29235b3c29d5d45c550dd8531634a071f03d82454f9ebe4f8b137a2
+MD5 (ipfabric-6-2-1+0.qcow2) = 1b9d9e3792cdd143a594391694d2d040
+SHA256 (ipfabric-6-2-1+0.ova) = e0f6fb103aa2e09500d1aebb05aa25d04981cc29c61ae788be6f3acaceed1964
+MD5 (ipfabric-6-2-1+0.ova) = ecafc607eaa8277b63564f46574ec101
+SHA256 (ipfabric-update-6_2_1+0.tar.gz.sig) = f255329e2cecab9f819feaafdf0f182d696029412b00bdd304606b888aa19964
+MD5(ipfabric-update-6_2_1+0.tar.gz.sig) = cfe8cc8f05b4b3f8435612176d5d6e62
+```
 
 ### Backward incompatible changes
 
