--- a/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
+++ b/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
@@ -1,6 +1,6 @@
 # LLRN 5.0.0
 
-These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 545 issues.
+These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 552 issues.
 
 ## Epics
 
@@ -274,6 +274,9 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8545` -- Medium -- Cisco APIC - missing tDn -> validation fails
 - `NIM-8546` -- Medium -- DHCP relay on HP comware is not correctly check if is enabled
 - `NIM-8551` -- Medium -- (v5.0.0) Table Description - New tables don't have table description, with complete information about endpoint...
+- `DOS-94` -- Medium -- Vips installation failed due to dpkg: error: dpkg status database is locked by another process
+- `DOS-256` -- Medium -- Validate services on upgraded 4.4 appliances
+- `DOS-276` -- High -- Fix broken python 3.9 installation in the product
 
 ## Tasks
 
@@ -495,6 +498,10 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8460` -- Medium -- Fix UI of copying policy or role
 - `NIM-8509` -- High -- Improve string validation of inputs for shell scripts
 - `NIM-8538` -- High -- Jobs Discovery / Snapshot Load - add new check for resources
+- `DOS-183` -- Low -- Install debug tools into our image
+- `DOS-257` -- Medium -- Set vm.max_map_count according to ArangoDB expectations
+- `DOS-285` -- Medium -- Try to use as much upstream packages as possible
+- `DOS-410` -- Medium -- Review recommended hw specs
 
 ## Sub-Tasks
 
