--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
@@ -280,7 +280,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10325` -- Medium -- Bugfix: commands/cisco/lldp/lldpNeiDetail (6.0.0-24)
 - `NIM-10332` -- Medium -- Bugfix: commands/cisco/ipv6RoutingTable (6.0.0-24)
 - `NIM-10334` -- Medium -- Bugfix: commands/cisco/_meraki/v1/networks/devices/wireless/status (6.0.0-24)
-- `NIM-10336` -- Medium -- DNAT - translated packed isn't correctly shown in gui
+- `NIM-10336` -- Medium -- DNAT - translated packed on Palo Alto isn't correctly shown
 - `NIM-10337` -- Medium -- Bugfix: commands/cisco/hosts (6.0.0-24)
 - `NIM-10340` -- Highest -- Record duplicates in vEox after migration to 6.1
 - `NIM-10341` -- Medium -- Bugfix: commands/juniper/_mist/v1/organizations/stats/devices (6.0.0-24)
