--- a/docs/releases/release_notes_low-level/6.x/6.2.x/6.2.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.2.x/6.2.1.md
@@ -1,6 +1,6 @@
 # LLRN 6.2.1
 
-These are low-level release notes for IP Fabric release `6.2.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 14 issues.
+These are low-level release notes for IP Fabric release `6.2.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 15 issues.
 
 ## Bugs
 
@@ -18,6 +18,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10725` -- Medium -- Cisco IOS - issue with ACL parsing
 - `NIM-10727` -- Medium -- Bugfix: commands/mikrotik/_routeros/ipNeighbor (6.1.0-17)
 - `NIM-10740` -- Medium -- Bugfix: commands/cisco/lldp/lldpNeiDetail (6.1.0-17)
+- `NIM-10741` -- Highest -- Updater saveCefFromPbrNexthop.js can fail when "vrf" value is undefined
 
 ## Tasks
 
