--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
@@ -177,7 +177,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7115` -- Highest -- Pahtlookup packet form - swapping ports bug
 - `NIM-7118` -- High -- Cisco FMC & Silverpeak api settings - wrong url help & other changes
 - `NIM-7121` -- Medium -- Bugfix: tasks/l3Interfaces/cisco
-- `NIM-7122` -- Highest -- Fuckup nimpeeMigrate
+- `NIM-7122` -- Highest -- Messed-up nimpeeMigrate
 - `NIM-7124` -- Highest -- Unable to load older snapshot on DEV14
 - `NIM-7125` -- High -- Snapshot Settings for new snapshot vs Update from global settings
 - `NIM-7131` -- High -- Old (and stretched) buttons in Path Lookup checks
