--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.4.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.4.md
@@ -24,7 +24,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7369` -- High -- BGP Neighbours are missing
 - `NIM-7371` -- High -- Not functional routing over bgp
 - `NIM-7376` -- Medium -- nsx-t wrong mapping of empty mac-table on l2port
-- `NIM-7377` -- Medium -- Routing protocols void assign query on Bloomberg data takes too long
+- `NIM-7377` -- Medium -- Routing protocols void assign query takes too long
 
 ## Tasks
 
