--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -14,5 +14,6 @@ tags: ["draft"]
 
 - Cisco
   - Viptela -- added vBond Orchestrator discovery support.
+  - Firepower -- added support for Threat Defense NAT policies (NAT44)
 - Juniper
   - Junos -- added support for [configuration groups](https://www.juniper.net/documentation/us/en/software/junos/junos-overview/cli/topics/concept/junos-software-configuration-groups-understanding.html) for tasks Zone Firewall, NAT44 and ACL (see our [feature matrix](https://matrix.ipfabric.io) for more details). 
