NIM-10043 Backward incompatible changes

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -10,10 +10,14 @@ tags: ["draft"]
 
 --8<-- "snippets/clear_browser_cache.md"
 
+### Backward incompatible changes
+
+- API Tokens and Webhook Secrets become auto-generated and non-editable by a user. They are available to view only once after creation, and the user won't be able to view or edit them any further. From now, both tokens and secrets will always be 32 characters long and generated randomly. If API Token or Webhook secret values are lost, they should be recreated.
+
 ### Network Discovery
 
 - Cisco
   - Viptela -- added vBond Orchestrator discovery support.
   - Firepower -- added support for Threat Defense NAT policies (NAT44)
 - Juniper
-  - Junos -- added support for [configuration groups](https://www.juniper.net/documentation/us/en/software/junos/junos-overview/cli/topics/concept/junos-software-configuration-groups-understanding.html) for tasks Zone Firewall, NAT44 and ACL (see our [feature matrix](https://matrix.ipfabric.io) for more details). 
+  - Junos -- added support for [configuration groups](https://www.juniper.net/documentation/us/en/software/junos/junos-overview/cli/topics/concept/junos-software-configuration-groups-understanding.html) for tasks Zone Firewall, NAT44 and ACL (see our [feature matrix](https://matrix.ipfabric.io) for more details).
