--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -4,6 +4,21 @@
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## v6.2.2 (TBD)
+
+<!-- For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.2.2](../release_notes_low-level/6.x/6.2.x/6.2.2.md). -->
+
+### Bug Fixes
+
+- Resolved an issue with F5 where interface IP addresses were not correctly interpreted.
+- Resolved some FS parsing issues following initial support in `6.2.1`.
+- Improved PBR representation and resolved an issue with set-vrf not correctly interpreted.
+
+### Network Discovery
+
+- Versa -- Changed API endpoints for routing table collection. New endpoints support pagination and allow downloads of big routing tables (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- Check Point -- refactoring of API discovery.
+
 ## v6.2.1 (April 11th, 2023)
 
 ```shell
@@ -29,6 +44,9 @@ MD5(ipfabric-update-6_2_1+0.tar.gz.sig) = cfe8cc8f05b4b3f8435612176d5d6e62
 - Cisco
   - FMC -- Added support for HA Pairs in Zone Firewall.
   - FMC -- Added support for EtherChannels in Zone Firewall.
+  - Viptela
+    - Lowered the maximum number of concurrent requests to a Viptela controller from 75 to 25 concurrent requests.
+    - Improved re-authentication process for Viptela controller -- this was causing destroyed client issues.
 - Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - FS -- Added limited support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - PaloAlto
