Add image checksums for 6.2.2 release

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -4,7 +4,16 @@
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## v6.2.2 (TBD)
+## v6.2.2 (May 16th, 2023)
+
+```shell
+SHA256 (ipfabric-6-2-2+0.qcow2) = 45787c1039e3ca322477332fb96d9eb7b63d9bd0682870443066bd355510c242
+MD5 (ipfabric-6-2-2+0.qcow2) = d3a7d7c0aed917bacc8c2f5aee33c41f
+SHA256 (ipfabric-6-2-2+0.ova) = 1ba74e416cfdb777c7f36302911da8f9ad373bc4f167c7fca950f6c7d9d5a1c9
+MD5 (ipfabric-6-2-2+0.ova) = fcaa6cde82b4abb41acd8e80c8503a5d
+SHA256 (ipfabric-update-6-2-2+0.tar.gz.sig) = 464634d28b79565f38d983ec027e2a940a95c6368ea8cd8fd07535eaf4e578fa
+MD5(ipfabric-update-6-2-2+0.tar.gz.sig) = ccfc9e25d347a00fc8bf085979380bf0
+```
 
 <!-- For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.2.2](../release_notes_low-level/6.x/6.2.x/6.2.2.md). -->
 
