--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -15,7 +15,7 @@ SHA256 (ipfabric-update-6-2-2+0.tar.gz.sig) = 464634d28b79565f38d983ec027e2a940a
 MD5(ipfabric-update-6-2-2+0.tar.gz.sig) = ccfc9e25d347a00fc8bf085979380bf0
 ```
 
-<!-- For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.2.2](../release_notes_low-level/6.x/6.2.x/6.2.2.md). -->
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.2.2](../release_notes_low-level/6.x/6.2.x/6.2.2.md).
 
 ### Bug Fixes
 
