--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -14,6 +14,11 @@ tags: ["draft"]
 
 - API Tokens and Webhook Secrets become auto-generated and non-editable by a user. They are available to view only once after creation, and the user won't be able to view or edit them any further. From now, both tokens and secrets will always be 32 characters long and generated randomly. If API Token or Webhook secret values are lost, they should be recreated.
 
+### Important changes
+
+- Vendor API `Slug` can only contain `a-zA-Z0-9_-`. Previously created configurations will be automatically modified by removing not-allowed characters from `Slug` according to the new validation rules.
+- SSO `roleName` can only contain `a-zA-Z0-9_-`. Previously created roles will be automatically modified by removing not-allowed characters from role name according to the new validation rules. Make sure specified `roleName` refers to the existing role in the system.
+
 ### Network Discovery
 
 - Cisco
