--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -14,6 +14,8 @@ tags: ["draft"]
 
 - API Tokens and Webhook Secrets become auto-generated and non-editable by a user. They are available to view only once after creation, and the user won't be able to view or edit them any further. From now, both tokens and secrets will always be 32 characters long and generated randomly. If API Token or Webhook secret values are lost, they should be recreated.
 
+- Column type of `selectorLocalAddress` and `selectorRemoteAddress` columns in IPsec tunnels table was changed to a string. We no longer allow `ip` filter operator with the given columns.
+
 ### Important changes
 
 - Vendor API `Slug` can only contain `a-zA-Z0-9_-`. Previously created configurations will be automatically modified by removing not-allowed characters from `Slug` according to the new validation rules.
