ST-198 Update menu navigation and images in 'System' and other improvements

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -164,7 +164,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
   - unfortunately, all the above Path lookup changes cause a
     breaking change in the API request payload.
 
-  - See [Tech Notes for Path Lookup](../../../../../IP_Fabric_API/Path_Lookup/)
+  - See [Tech Notes for Path Lookup](../../../../IP_Fabric_API/Path_Lookup/index.md)
 
 ### Features - Protocol and technology support
 
@@ -212,7 +212,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
   Cisco Firepower](../../../../support/known_issues/Vendors/cisco/Dropping_support_for_ACL_on_Cisco_Firepower.md)
 - Added API endpoint POST `/v1/tables/management/snapshots` for the
   possibility to get information about all snapshots (loaded,
-  unloaded) via [API](../../../../../IP_Fabric_API/Path_Lookup/)
+  unloaded) via [API](../../../../IP_Fabric_API/Path_Lookup/index.md)
 - Path Lookup inspector - cosmetic improvement of ACI endpoint lookup
   reporting
 - Path Lookup - Forwarding for explicit label 0 fix
