--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -78,7 +78,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
     contain `api/v5.0` rather than `api/v1`. If you are scripting against the
     API or using it to integrate into other systems, you must change the URL to
     the new format. For more information on this please visit the [API
-    Documentation](../../../IP_Fabric_API/) page.
+    Documentation](../../IP_Fabric_API/index.md) page.
 
     `ipfabric` and `ipfabric-diagrams` Python SDK's have been updated to
     support the new changes. Please visit
@@ -138,7 +138,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
 - This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrade to `v5.0.0`. IP Fabric `v4.4.2` or lower will not work -- please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
 - Due to the major changes stated above, automatic updates will be disabled for this release and will require manual upgrade.
-- Prior to update please ensure you perform a [backup of your system](../../../System_Administration/Administrative_Interface/backup_and_restore/) or it is highly recommend to create a VM snapshot
+- Prior to update please ensure you perform a [backup of your system](../../System_Administration/Administrative_Interface/backup_and_restore.md) or it is highly recommend to create a VM snapshot
 - It is recommended (for all updates) to unload all snapshots prior to performing the upgrade.
 - Requires 10GB of free disk space.
 - Estimated upgrade time is around 20 minutes however depending on the resources of your VM it could take longer than an hour.
@@ -147,7 +147,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
   - `tail -f /var/log/nimpee/dist_upgrade.log`
   - If `tail` command is not found wait a few minutes and log out and back into the CLI.
 - Once upgrade has finished the system will reboot (see below the example output of the `dist_upgrade.log` file).
-- After all updates please [**Clear Browser Cache**](../../).
+- After all updates, please [**Clear Browser Cache**](../index.md).
 - Not all new features will be available until a new snapshot is created on the updated version.
 - If after the upgrade you experience issues with `AQL: internal error`, Dashboards, or Topology please first try restarting the `ArangoDB` service from the System Administrator page prior to contacting support.
   - Log into the System Administrator Page located or port `443`
@@ -204,7 +204,7 @@ osadmin@ipfabric:~$ tail -f /var/log/nimpee/dist_upgrade.log
 
 IP Fabric `v5.0.0` includes Phase 1 of RBAC. The most significant change is that Users are now assigned to a Role(s) and not given specific permissions. During the upgrade process your users will be migrated to the appropriate roles. For more information see the documentation at the links below.
 
-- [Policies](../../../IP_Fabric_Settings/user_management/policies/)
+- [Policies](../../IP_Fabric_Settings/administration/policies.md)
   - This is where you define the endpoints users have access to.
   - There are 5 built-in Policies in `v5.0.0`
     - `settings`: Access to snapshot and product settings endpoints
@@ -212,10 +212,10 @@ IP Fabric `v5.0.0` includes Phase 1 of RBAC. The most significant change is that
     - `team`: Access to user management endpoints
     - `tables`: Access to table endpoints
     - `others`: Migrated read scope - to be deprecated in 5.1
-- [Roles](../../../IP_Fabric_Settings/user_management/roles/)
+- [Roles](../../IP_Fabric_Settings/administration/roles.md)
   - A Role can consist of one or more policies
   - `admin` role cannot be changed or deleted
-- [Users](../../../IP_Fabric_Settings/user_management/users/)
+- [Users](../../IP_Fabric_Settings/administration/users.md)
   - A User can also consist of one or more roles
 
 ### IP Fabric VM OS-Level Changes
