NIM-10711 Backward incompatible changes for old NAT

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -13,8 +13,8 @@ tags: ["draft"]
 ### Backward incompatible changes
 
 - API Tokens and Webhook Secrets become auto-generated and non-editable by a user. They are available to view only once after creation, and the user won't be able to view or edit them any further. From now, both tokens and secrets will always be 32 characters long and generated randomly. If API Token or Webhook secret values are lost, they should be recreated.
-
 - Column type of `selectorLocalAddress` and `selectorRemoteAddress` columns in IPsec tunnels table was changed to a string. We no longer allow `ip` filter operator with the given columns.
+- Legacy NAT tables have been replaced with NAT44 table (`tables/security/nat44`) in release 6.1. This release removes the remaining two legacy tables - `tables/addressing/nat/rules` and `tables/addressing/nat/pools`.
 
 ### Important changes
 
