ST-196: Implement description linter (seo optimization)
!474

Squashed commit of the following:

commit b4549dde8b134b98df7641dfd392f18b11fdf4c0
Author: Arne Rusek <arne.rusek@ipfabric.io>
Date:   Tue Jun 6 08:58:54 2023 +0000

    Suggestion applied

commit b685616d0d97bbd341f790a9b979a6c58e0104e0
Author: Yan Huang <yan.huang@ipfabric.io>
Date:   Mon Jun 5 12:29:50 2023 +0000

    Apply 11 suggestion(s) to 11 file(s)

commit c6b575f910300de0bfc7299a04b8097929e1222f
Author: Yan Huang <yan.huang@ipfabric.io>
Date:   Mon Jun 5 12:28:18 2023 +0000

    RN descriptions

commit cee60f89a81021aef482e23f4c5f88b49e74eee9
Author: adam.cinko-ipf <adam.cinko@ipfabric.io>
Date:   Mon Jun 5 13:09:55 2023 +0200

    ST-196 bash script revision

commit 0282fb22933b9aff03d9819c97345e39e7514606
Author: adam.cinko-ipf <adam.cinko@ipfabric.io>
Date:   Fri Jun 2 11:10:53 2023 +0200

    fixup! modify CI

commit e4e92970ed5cb01da2ce55001c335e8b33320ee6
Author: adam.cinko-ipf <adam.cinko@ipfabric.io>
Date:   Fri Jun 2 10:46:46 2023 +0200

    fixup! modify CI

commit d1337921d493cae1983d4159286b554b94653b55
Author: adam.cinko-ipf <adam.cinko@ipfabric.io>
Date:   Fri Jun 2 10:21:11 2023 +0200

    modify CI

commit 526a75984a9d71fc1aac727e243548b7666cc586
Author: adam.cinko-ipf <adam.cinko@ipfabric.io>
Date:   Fri Jun 2 10:16:50 2023 +0200

    move and rename files

commit 2497b9491a57a2baab63bcfa7af4fdaa36b36cea
Author: Antonin Kral <antonin.kral@ipfabric.io>
Date:   Fri Jun 2 09:27:47 2023 +0200

    Regen LLRN

commit d2cff054e60891bac3612fc2d6e02767d942fdfa
Author: Yan Huang <yan.huang@ipfabric.io>
Date:   Fri Jun 2 07:03:46 2023 +0000

    apply suggestion from Yan

commit 6e85c99a7c6cd924846a4e0be5b31653832f3080
Author: Yan Huang <yan.huang@ipfabric.io>
Date:   Thu Jun 1 09:08:28 2023 +0000

    apply Yan's suggestion

commit 914342f15f8c7f956807b2d342b27a1fcd5804b1
Author: Yan Huang <yan.huang@ipfabric.io>
Date:   Thu Jun 1 09:08:24 2023 +0000

    apply Yan's suggestion

commit b

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v6.1 releases.
+---
+
 # IP Fabric v6.1 (Burlap)
 
 --8<-- "snippets/upgrade_version_policy.md"
