--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v4.0 releases.
+---
+
 # IP Fabric v4.0
 
 ## 4.0.2 (11th October 2021)
