--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v5.0 releases.
+---
+
 # IP Fabric v5.0
 
 ## v5.0.2 (Sep 13th, 2022)
