--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v6.2 releases.
+---
+
 # IP Fabric v6.2 (Hessian)
 
 --8<-- "snippets/upgrade_version_policy.md"
