--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.1.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.1.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v4.1 releases.
+---
+
 # IP Fabric v4.1
 
 ## 4.1.1 (3rd December 2021)
