--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v4.2 releases.
+---
+
 # IP Fabric v4.2
 
 ## 4.2.0 (20th December 2021)
