--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v4.3 releases.
+---
+
 # IP Fabric v4.3
 
 ## 4.3.5+1 (9th March 2022)
