--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.4.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.4.md
@@ -1,3 +1,7 @@
+---
+description: In this section, you can find the release notes for v4.4 releases.
+---
+
 # IP Fabric v4.4
 
 ## 4.4.3+2 (27th May 2022)
