ST-131 Change 'click on' to 'click'

--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -1081,7 +1081,7 @@ Hyper-V SHA256SUM: 2556A6EB2C7B2DE7318E8FFF1787E5A63D5E5A54BFA1D72F3B416B60DBB
 ### Features - Protocol and technology support
 
 - Device Explorer - Detailed view for each device
-  - When you click on hostname value in every table then you can see
+  - When you click hostname value in every table then you can see
     data from any other table where the data will be automatically
     filtered for that device.
 - Added summarized tables about device inventory. New tabs in
