ST-131 Replace various variants with 'log in to'

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -147,16 +147,16 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 - Requires 10GB of free disk space.
 - Estimated upgrade time is around 20 minutes however depending on the resources of your VM it could take longer than an hour.
 - During update to `5.0.0` no message about the update being finished is shown and a refresh of the Admin page is required to check if the API and services are back online.
-- After approximately 5-10 minutes after the update file has finished uploading to the server you should be able to log into the IPF CLI as `osadmin` and run the following command to track installation progress
+- After approximately 5-10 minutes after the update file has finished uploading to the server you should be able to log in to the IPF CLI as `osadmin` and run the following command to track installation progress
   - `tail -f /var/log/nimpee/dist_upgrade.log`
-  - If `tail` command is not found wait a few minutes and log out and back into the CLI.
+  - If `tail` command is not found wait a few minutes and log out and back in to the CLI.
 - Once upgrade has finished the system will reboot (see below the example output of the `dist_upgrade.log` file).
 - After all updates, please [**Clear Browser Cache**](../index.md).
 - Not all new features will be available until a new snapshot is created on the updated version.
-- If after the upgrade you experience issues with `AQL: internal error`, Dashboards, or Topology please first try restarting the `ArangoDB` service from the System Administrator page prior to contacting support.
-  - Log into the System Administrator Page located or port `443`
-  - In the `System Status` page under `System Services` you will find `ArangoDB`
-  - Next to the status color is a `restart` button which will restart the service
+- If after the upgrade you experience issues with `AQL: internal error`, Dashboards, or Topology, please first try restarting the `ArangoDB` service from the **System Administration** page prior to contacting support.
+  - Log in to the **System Administration** page located on port `8443`.
+  - In the `System Status` page under `System Services`, you will find `ArangoDB`.
+  - Next to the status color is a `restart` button which will restart the service.
 - If you run into any other issues during or after the upgrade please open a [support ticket](http://support.ipfabric.io/).
 
 Example output of successful `/var/log/nimpee/dist_upgrade.log` log file:
