--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -651,7 +651,7 @@ SHA256SUM: c16cbac6040e7d07d04c42142ddbb42acc0547c912d726efa1bd1138a58f5be4
 
 ### Improvements
 
-- The login into the platform was slow - rewritten DB query for GET
+- Logging in to the platform was slow - rewritten DB query for GET
   /snapshot endpoint
 - Rewritten DB query to speedup post-discovery topology calculation
 - Technology / Security / Zone firewall / Interfaces - format data in
