ST-198 Add `Settings` menu changes to `6.3` release notes

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -35,3 +35,35 @@ tags: ["draft"]
 - Opengear
   - IM -- added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 
+### Re-organized Settings menu structure
+
+To make the **Settings** menu more logical and intuitive, we have re-organized its items (including renaming some of them).
+
+The following table shows how the items in the old menu map to those in the new menu:
+
+| Old location                                  | Location in 6.3                                                           |
+| :-------------------------------------------- | :------------------------------------------------------------------------ |
+| Authentication                                | Discovery & Snapshots --> Discovery Settings --> Device Credentials       |
+| Discovery Seed                                | Discovery & Snapshots --> Discovery Settings --> Discovery Seeds          |
+| Site Separation                               | Discovery & Snapshots --> Discovery Settings --> Site Separation          |
+| Advanced --> Discovery                        | Discovery & Snapshots --> Discovery Settings --> Discovery                |
+| Advanced --> Assurance Engine                 | Discovery & Snapshots --> Discovery Settings --> Assurance Engine         |
+| Advanced --> Disabled Discovery Tasks         | Discovery & Snapshots --> Discovery Settings --> Disabled Discovery Tasks |
+| Advanced --> Snapshots                        | Discovery & Snapshots --> Snapshot Retention                              |
+| Advanced --> SSH/Telnet                       | Discovery & Snapshots --> Discovery Settings --> Advanced CLI             |
+| Advanced --> SSH/Telnet --> Jumphost settings | Discovery & Snapshots --> Global Configuration --> Jumphost               |
+| Advanced --> Vendors API                      | Discovery & Snapshots --> Discovery Settings --> Vendors API              |
+| Advanced --> Configuration Management         | Configuration Management                                                  |
+| Advanced --> IP FABRIC Certificate            | System --> IPF Certificates                                               |
+| Advanced --> System                           | System --> Backup & Maintenance                                           |
+| Advanced --> SNMP                             | System --> SNMP                                                           |
+| User Management --> Users                     | Administration --> Local Users                                            |
+| User Management --> LDAP                      | Administration --> LDAP                                                   |
+| User Management --> Policies                  | Administration --> Policies                                               |
+| User Management --> Roles                     | Administration --> Roles                                                  |
+| Certificate Authorities                       | System --> Certificate Authorities                                        |
+| API Tokens                                    | Integration --> API Tokens                                                |
+| Webhooks                                      | Integration --> Webhooks                                                  |
+| Device Attributes                             | Discovery & Snapshots --> Global Configuration --> Device Attributes      |
+| OUI                                           | Discovery & Snapshots --> Global Configuration --> OUI                    |
+| Configuration Wizard                          | (unchanged)                                                               |
