Vendor API Changes Into Release Notes

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -21,6 +21,8 @@ tags: ["draft"]
 
 - Vendor API `Slug` can only contain `a-zA-Z0-9_-`. Previously created configurations will be automatically modified by removing not-allowed characters from `Slug` according to the new validation rules.
 - SSO `roleName` can only contain `a-zA-Z0-9_-`. Previously created roles will be automatically modified by removing not-allowed characters from role name according to the new validation rules. Make sure specified `roleName` refers to the existing role in the system.
+- Limiting the number of the Discovery services restarts -- from now on it is possible to change the default number of discovery service restarts. This may help you if your full discovery never completes. To change this setting, please contact our customer support team.
+- You can use the `Test Connection` button to check the Vendor API connectivity settings. The connection is not tested automatically with each change, but only when you click the button. This lets you save the Vendor API settings even if the controller is unreachable from IP Fabric.
 
 ### Network Discovery
 
@@ -31,6 +33,11 @@ tags: ["draft"]
   - Junos -- added support for [configuration groups](https://www.juniper.net/documentation/us/en/software/junos/junos-overview/cli/topics/concept/junos-software-configuration-groups-understanding.html) for tasks Zone Firewall, NAT44 and ACL (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Opengear
   - IM -- added support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+- NSX-T -- API rate limiting was added to NSX-T discovery.
+- Versa -- `refillRate` can be changed in the database settings and Pagination Limit in the Vendor API controller settings.
+- IP Fabric
+  - New Vendor API worker -- we have added a new worker to IP Fabric that only handles Vendor API data. Before, `worker@1` processed both Vendor API and CLI data. This change allows us to process up to 60 Vendor API devices simultaneously, instead of 20. You can contact our customer support team to adjust this default value if necessary.
+  - Vendor API load-balancing -- IP Fabric can now process devices from multiple Vendor API controllers simultaneously. This change should speed up the discovery process and reduce the load on the Vendor API controllers.
 
 ### Re-organized Settings menu structure
 
