NIM-11239 Handling locked snapshots migration

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -11,6 +11,10 @@ tags: ["draft"]
 
 --8<-- "snippets/clear_browser_cache.md"
 
+### Upgrade Notices
+
+- During the update process locked snapshots will be unloaded together with other snapshots and their lock will be preserved. Therefore, such snapshots won't be deleted by snapshot retention.
+
 ### Backward incompatible changes
 
 - API Tokens and Webhook Secrets become auto-generated and non-editable by a user. They are available to view only once after creation, and the user won't be able to view or edit them any further. From now, both tokens and secrets will always be 32 characters long and generated randomly. If API Token or Webhook secret values are lost, they should be recreated.
