--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -33,6 +33,7 @@ tags: ["draft"]
 - Cisco
   - Viptela -- added vBond Orchestrator discovery support.
   - Firepower -- added support for Threat Defense NAT policies (NAT44).
+  - DNA Center -- added support for [Locator/ID Separation Protocol](../../IP_Fabric_GUI/technology_tables/Lisp.md) (LISP).
 - Juniper
   - Junos -- added support for [configuration groups](https://www.juniper.net/documentation/us/en/software/junos/junos-overview/cli/topics/concept/junos-software-configuration-groups-understanding.html) for tasks Zone Firewall, NAT44 and ACL (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - Opengear
