Drop `v` from version strings to keep consistency

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -21,7 +21,7 @@ TAR MD5: 62518242728b95c08f5362ebcddec140
 !!! warning "Read All Upgrade Notices"
 
     Please read all v5.0.0 UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
-    This upgrade requires IP Fabric to be on `v4.4.3` or greater prior to upgrading to `v5.0.1`.
+    This upgrade requires IP Fabric to be on `4.4.3` or greater prior to upgrading to `5.0.1`.
 
 ### Bug Fixes
 
@@ -52,11 +52,11 @@ TAR MD5: 0f79000974e0e5c60590e161785a1067
 !!! warning "Read All Upgrade Notices"
 
     Please read all v5.0.0 UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
-    This upgrade requires IP Fabric to be on `v4.4.3` or greater prior to upgrading to `v5.0.1`.
+    This upgrade requires IP Fabric to be on `4.4.3` or greater prior to upgrading to `5.0.1`.
 
 ### Bug Fixes
 
-- `v5.0.0` was unpublished as a race condition in Palo Alto discovery was reported; this has been fixed in `v5.0.1`.
+- `5.0.0` was unpublished as a race condition in Palo Alto discovery was reported; this has been fixed in `5.0.1`.
 
 ### Features
 
@@ -74,7 +74,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 !!! warning "Read All Upgrade Notices"
 
     Please read all UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
-    This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrading to `v5.0.0`.
+    This upgrade requires IP Fabric to be on `4.4.3` prior to upgrading to `5.0.0`.
 
 !!! warning "API Versioning"
 
@@ -92,7 +92,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
 !!! warning "SSO and API versioning"
 
-    Upgrade to `v5.0.0` will break custom SSO integrations an will require
+    Upgrade to `5.0.0` will break custom SSO integrations an will require
     changes to your files prior to re-enabling. Before upgrading and if you have
     SSO deployed please contact your Solution Architect to copy your custom
     settings and and re-deploy them after the update.
@@ -140,7 +140,7 @@ QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
 
 ### **UPGRADE NOTICES**
 
-- This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrade to `v5.0.0`. IP Fabric `v4.4.2` or lower will not work -- please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
+- This upgrade requires IP Fabric to be on `4.4.3` prior to upgrade to `5.0.0`. IP Fabric `4.4.2` or lower will not work -- please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
 - Due to the major changes stated above, automatic updates will be disabled for this release and will require manual upgrade.
 - Prior to update please ensure you perform a [backup of your system](../../System_Administration/Administrative_Interface/backup_and_restore.md) or it is highly recommend to create a VM snapshot
 - It is recommended (for all updates) to unload all snapshots prior to performing the upgrade.
@@ -206,11 +206,11 @@ osadmin@ipfabric:~$ tail -f /var/log/nimpee/dist_upgrade.log
 
 ### Role-Based Access Control Phase 1
 
-IP Fabric `v5.0.0` includes Phase 1 of RBAC. The most significant change is that Users are now assigned to a Role(s) and not given specific permissions. During the upgrade process your users will be migrated to the appropriate roles. For more information see the documentation at the links below.
+IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that Users are now assigned to a Role(s) and not given specific permissions. During the upgrade process your users will be migrated to the appropriate roles. For more information see the documentation at the links below.
 
 - [Policies](../../IP_Fabric_Settings/administration/policies.md)
   - This is where you define the endpoints users have access to.
-  - There are 5 built-in Policies in `v5.0.0`
+  - There are 5 built-in Policies in `5.0.0`
     - `settings`: Access to snapshot and product settings endpoints
     - `discovery`: Access to discovery endpoints
     - `team`: Access to user management endpoints
@@ -235,7 +235,7 @@ IP Fabric `v5.0.0` includes Phase 1 of RBAC. The most significant change is that
 
 --8<-- "snippets/cli_root_access.md"
 
-- All TLS version less than `v1.3` have been deprecated.
+- All TLS version less than `1.3` have been deprecated.
   - Some older browsers, proxies, or systems may have issues connecting to IP Fabric after this change.
   - To re-enable an older version please see [Custom TLS Settings](../../System_Administration/Command_Line_Interface/Custom_TLS.md) or contact your Solution Architect.
 - Boot Wizard Changes
