SA-437 Document new tables for RBAC customers

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -29,6 +29,26 @@ tags: ["draft"]
 - Limiting the number of the Discovery services restarts -- from now on it is possible to change the default number of discovery service restarts. This may help you if your full discovery never completes. To change this setting, please contact our customer support team.
 - You can use the `Test Connection` button to check the Vendor API connectivity settings. The connection is not tested automatically with each change, but only when you click the button. This lets you save the Vendor API settings even if the controller is unreachable from IP Fabric.
 
+### New tables for customers using RBAC
+
+The following new tables have been added to IP Fabric. If you are utilizing RBAC
+please verify and update your
+[Policies](../../IP_Fabric_Settings/administration/policies.md) to ensure your
+users are able to view them as well as using the Path Lookup autocomplete.
+If you need assistance please contact your Solution Architect.
+
+- Technology Tables
+  - POST `/tables/serial-ports` (Technology --> Serial Ports)
+  - POST `/tables/routing/protocols/is-is/levels` (Technology --> Routing --> IS-IS --> Levels)
+  - Tables under Technology --> Routing --> LISP
+    - POST `/tables/routing/protocols/lisp/ipv4-routes` (Routes --> IPv4)
+    - POST `/tables/routing/protocols/lisp/ipv6-routes` (Routes --> IPv6)
+    - POST `/tables/routing/protocols/lisp/ipv4-databases` (Map Resolvers --> IPv4)
+    - POST `/tables/routing/protocols/lisp/ipv6-databases` (Map Resolvers --> IPv6)
+- Path Lookup: These new endpoints will search the IP Fabric database and autocomplete the IP Address dropdown fields.
+  - POST `/tables/addressing/path-lookup-sources-unicast`
+  - POST `/tables/addressing/path-lookup-sources-multicast`
+
 ### Network Discovery
 
 - Cisco
