ST-131 Slightly polish 'Boot Wizard' pages and other improvements

--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -3128,6 +3128,6 @@ The Release Candidate is currently in active development.
 The RC1 version is designed to collect feedback about functionality for
 practical situations, such as making changes, tracking history, creating
 reference snapshots, and more.  
-Please post any ideas for improvement to <https://ideas.ipfabric.io> and
-in case of any problems contact our support team, either via the
+Please post any ideas for improvement to `https://ideas.ipfabric.io` (obsolete)
+and in case of any problems, contact our support team, either via the
 <https://support.ipfabric.io> portal or through <support@ipfabric.io>.
