NIM-11931 Document known issue in OUI UI

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -97,3 +97,12 @@ The following table shows how the items in the old menu map to those in the new 
 | Device Attributes                             | Discovery & Snapshots --> Global Configuration --> Device Attributes      |
 | OUI                                           | Discovery & Snapshots --> Global Configuration --> OUI                    |
 | Configuration Wizard                          | (unchanged)                                                               |
+
+### Known issues
+
+- Editing OUI entries is broken in the UI (**Settings --> Discovery & Snapshots --> Global Configuration --> OUI**).
+  OUI can be viewed and all previous changes are kept, but cannot be added or changed at the moment.
+  - ID: `NIM-11931`
+  - Root cause: UI uses wrong API endpoint URLs after restructuring settings menu.
+  - Workaround: Use API `/settings/oui/*` directly.
+  - Affected version: 6.3.0
