NIM-11916 List rbac problem with table csv export

--- a/docs/releases/release_notes/6.3.md
+++ b/docs/releases/release_notes/6.3.md
@@ -106,3 +106,8 @@ The following table shows how the items in the old menu map to those in the new 
   - Root cause: UI uses wrong API endpoint URLs after restructuring settings menu.
   - Workaround: Use API `/settings/oui/*` directly.
   - Affected version: 6.3.0
+- Custom policies with access to table endpoints don't allow to export table as CSV
+  - ID: `NIM-11916`
+  - Root cause: Custom policies could grant access only to `POST` HTTP method on table endpoints while export uses `GET` method
+  - Workaround: Use admin access to export tables
+  - Affected version: 6.3.0
